   GetSensorDefinition

 Bugs:
 * Fix some Xcode build errors
 * Fix the build on Windows
 * Fix a bug in Artnet universe mapping #856
 * NACK requests for IPv4 default route PID with data
 * NACK with format error requests for DNS PIDs with data
 * Fix a bug regarding stack traces error messages with Python RDM gets #884

 Internal:
 *

13/7/2015 ola-0.9.7
 Bugs:
 * RDM NACK codes displayed with incorrect byte ordering in the C++ client #812
 * Fix endian issues on s390x and PPC architectures.
 * Fix ShowNet endian issues.
 * Add some missing files to the tarball.
 * Restore binary compatability with 0.9.5 #826

30/6/2015 ola-0.9.6
 Features:
 * Default to using epoll() rather than select() if it exists,
 * Default to the async libusb implementation in the usbdmx plugin.
 * Added support for the APA102 family of SPI pixels.
 * Allow plugins to be enabled/disabled from the new web UI & CLI tools #682.
 * Add an option to display the frame and timing data in the RDM CLI tools
   where available.
 * Add additional C++ client documentation and examples.
 * Support an overrides.proto file to load system specific PID data #732.
 * Respect UUCP lock files before opening devices #716.
 * Initial partial E1.37-2 support in the web UI.

 API:
 * Python: Fix a bug where callbacks weren't run if the operation failed.
 * Python: improve Python 3 compatability.
 * Add patched ports in Universe protobuf message.
 * Python: Add a patch/unpatch example.
 * Python Add GetCandidatePorts and an example.

 RDM Tests:
 * Initial E1.37-2 tests.
 * Fix a bug in the SetDeviceHours test for devices that NAck set DEVICE_HOURS
   with a NR_WRITE_PROTECT.

 Bugs:
 * Fix port with unset universe appearing as bound to universe 0 in the Python
   client.
 * Ensure universe names and LTP priorities are always written to the config
   file #661.
 * Stop tests from failing when no non-loopback interfaces are present #763
   Debian #769670.
 * Fix various configure script behaviour issues #773.